重命名了car->vehicle，添加了modifyVehicle功能
